--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   }
   
   .next {
-    padding-left: 25%;
+    padding-left: 300px;
     cursor: pointer;
   }
 
@@ -39,7 +39,7 @@
 <div id="results" class="results">
   <div><a href="https://companionwatch.com" target="chosen"><img src="assets/companion.png"/></a></div>
   <div><a href="https://www.cprguardian.com/products/cpr-guardian-3" target="chosen"><img src="assets/cprguardian.png"/></a></div>
-  <div style="padding-left: 1%"><a href="https://www.personalalarmwatch.com" target="chosen"><img src="assets/personal-alarm.png"/></a></div>
+  <div><a href="https://www.personalalarmwatch.com" target="chosen"><img src="assets/personal-alarm.png"/></a></div>
 </div>
 
 <div id="next" class="next">
